@@ -25,7 +25,7 @@ if {[encoding system] != "utf-8"} {
 if {![info exists tk_version]} {package require Tk}
 wm withdraw .
 
-set version "2025-08-20"
+set version "2025-08-22"
 set script [file normalize [info script]]
 set title [file tail $script]
 set cwd [pwd]
@@ -458,6 +458,7 @@ set console 0;			# Valid values: 0=hide, 1=show
 
 set ctid [thread::create -joinable "
   package require Tk
+  package require tcl::chan::fifo2
   wm withdraw .
   wm title . \"$title - [mc l99]\"
   set font_size ${console.font.size}
@@ -512,7 +513,6 @@ ctsend {
     .txt yview moveto [lindex $py 0]
   }
 
-  set aid 0
   proc write {text} {
     .txt configure -state normal
     if {[string index $text 0] == "\r"} {
@@ -521,14 +521,12 @@ ctsend {
     }
     .txt insert end $text
     .txt configure -state disabled
-    # Prevent console from freezing by
-    # too fast/much incoming write requests
-    catch "after cancel $::aid"
-    set ::aid [after 100 {.txt see end}]
+    if {[winfo ismapped .]} {.txt see end}
   }
 
   proc show_hide {show} {
     if {$show} {
+      .txt see end
       if {$::geometry == ""} {
 	wm deiconify .
       } else {
@@ -545,7 +543,18 @@ ctsend {
     }
   }
 
+  lassign [::tcl::chan::fifo2] fdi fdo
+  thread::detach $fdo
+  fconfigure $fdi -blocking 0 -buffering line -translation lf
+  fileevent $fdi readable "
+    while {\[gets $fdi line\] >= 0} {write \"\$line\\n\"}
+  "
 }
+
+set fdo [ctsend "set fdo"]
+thread::attach $fdo
+fconfigure $fdo -blocking 0 -buffering line -translation lf
+interp alias {} ::cputs {} ::puts $fdo
 
 if {$console == 1} {
   set console.show 1
@@ -554,7 +563,6 @@ if {$console == 1} {
 
 # Write to console
 
-proc cputs {text} {thread::send -async $::ctid [list write $text\n]}
 proc cputi {text} {cputs "\[---\] $text"}
 proc cputw {text} {cputs "\[+++\] $text"}
 
@@ -671,7 +679,12 @@ if {!$rc} {
 
 if {$rc || $java_version == 0} \
   {error_message [mc e08 Java [get_shell_command $command] $result] exit}
-if {$java_version < 11} {error_message [mc e07 Java $java_string 11] exit}
+
+# Check minimum required Java version
+
+set java_version_min 11
+if {$java_version < $java_version_min} \
+  {error_message [mc e07 Java $java_string $java_version_min] exit}
 
 # Prepend Java executable's path to PATH environment variable
 # to force same Java executable for nested Java calls
@@ -1132,7 +1145,10 @@ checkbutton .output -text [mc c99] \
 	-variable console.show -command show_hide_console
 pack .output -expand 1 -fill x
 
-proc show_hide_console {} {ctsend "show_hide ${::console.show}"}
+proc show_hide_console {} {
+  update idletasks
+  ctsend "show_hide ${::console.show}"
+}
 show_hide_console
 
 # Map/Unmap events are generated by Windows only!
@@ -2215,7 +2231,7 @@ proc process_start {command process} {
 
   unset -nocomplain ::$process.eof
   fileevent $fd readable "
-    while {\[gets $fd line\] >= 0} {
+    if {\[gets $fd line\] >= 0} {
       cputs \"\\$mark \$line\"
     }
     if {\[eof $fd\]} {
